--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "nodemailer": "^6.8.0"
   }
 }
