--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "googleapis": "^110.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.6.5",
     "nodemailer": "^6.8.0"
